k8s/ingress/service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kompose-test-ingress
  namespace: kompose-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: evolution.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: evolution
                port:
                  number: 8080
    - host: n8n.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 5678
